Adds quote snippet to comment
If a comment is not yet persisted and it has a valid parent_id
(another comment), it will grab the parent's content and assign it to
the new comment's quote attribute.

--- a/app/views/comments/_new_comment_form.html.erb
+++ b/app/views/comments/_new_comment_form.html.erb
@@ -1,5 +1,8 @@
+<%= parent_id ||= nil %>
+
 <form class="new_comment_form" action="<%= api_discussion_comments(discussion.id) %>" method="POST">
   <%= render "layouts/csrf" %>
   <textarea name="comment[content]"></textarea>
+  <input type="hidden" name="comment[parent_id]">
   <button type="submit">Submit</button>
 </form>
