--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,9 @@
  *= require_self
  *= require_tree .
  */
+
+h1, h2, h3, div, section, p, ul, ol, li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
