--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.comment-list {
+  width: 600px;
+}
+
+.comment {
+  margin: 10px 0px;
+}
+
+.comment-quote {
+  font-style: italic;
+  margin-bottom: 10px;
+  background-color: #EEEEEE;
+}
