Adds ability to promote/banish subtopics
In a discussion, the promote and banish methods accept a comment,
then finds all child comments of it. It then creates a new discussion
with a summary matching the comment that was passed, and moves all
child comments into it.

The difference between promote and banish is that banish sets the
discussion's visibility to false (which does nothing now, but will
mean that it's not advertised on its source page, and its comments are
not checked for further promotion/banishment)

--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -1,6 +1,8 @@
 <h1><%= @discussion.summary %></h1>
 <h2>Pertaining to the article <%= link_to @discussion.article.title, @discussion.article %></h2>
 
+<%= render "comments/new_comment_form", discussion: @discussion %>
+
 <ol class="comment-list">
 <% @comments.each do |comment| %>
   <%= render "comments/comment", comment: comment %>
