--- a/app/views/comments/_new_comment_form.html.erb
+++ b/app/views/comments/_new_comment_form.html.erb
@@ -1,8 +1,8 @@
 <%= parent_id ||= nil %>
 
-<form class="new_comment_form" action="<%= api_discussion_comments(discussion.id) %>" method="POST">
+<form class="new_comment_form" action="<%= discussion_comments_url(discussion.id) %>" method="POST">
   <%= render "layouts/csrf" %>
-  <textarea name="comment[content]"></textarea>
+  <textarea name="comment[content]" placeholder="New comment..."></textarea><br>
   <input type="hidden" name="comment[parent_id]">
   <button type="submit">Submit</button>
 </form>
