--- a/app/views/comments/_new_comment_form.html.erb
+++ b/app/views/comments/_new_comment_form.html.erb
@@ -3,6 +3,6 @@
 <form class="new_comment_form" action="<%= discussion_comments_url(discussion.id) %>" method="POST">
   <%= render "layouts/csrf" %>
   <textarea name="comment[content]" placeholder="New comment..."></textarea><br>
-  <input type="hidden" name="comment[parent_id]">
+  <input type="hidden" name="comment[parent_id]" value="<%= parent_id %>">
   <button type="submit">Submit</button>
 </form>
