Adds reply-to-comment forms via EJS

--- a/app/assets/javascripts/views/new_comment_form.jst.ejs
+++ b/app/assets/javascripts/views/new_comment_form.jst.ejs
@@ -1,6 +1,5 @@
 <% parentId || (parentId = nil) %>
-
-<form class="new_comment_form">
+<form class="new-comment-form" data-discussion-id="<%= discussionId %>">
   <textarea name="comment[content]" placeholder="New comment..."></textarea><br>
   <input type="hidden" name="comment[parent_id]" value="<%= parentId %>">
   <button type="submit">Submit</button>
