--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @discussion.summary %></h1>
+<h1 data-id="<%= @discussion.id %>"><%= @discussion.summary %></h1>
 <h2>Pertaining to the article <%= link_to @discussion.article.title, @discussion.article %></h2>
 
 <%= render "comments/new_comment_form", discussion: @discussion %>
