--- a/app/assets/javascripts/views/new_comment_form.jst.ejs
+++ b/app/assets/javascripts/views/new_comment_form.jst.ejs
@@ -1,7 +1,6 @@
 <% parentId || (parentId = nil) %>
-<form class="new-comment-form" data-discussion-id="<%= discussionId %>">
+<form class="new-comment-form">
   <textarea name="comment[content]" placeholder="New comment..."></textarea><br>
   <input type="hidden" name="comment[parent_id]" value="<%= parentId %>">
-  <input type="hidden" name="comment[discussion_id]" value="<%= discussionId %>">
   <button type="submit">Submit</button>
 </form>
