Puts comment.js into module, calls it in discussion#show page

--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -8,3 +8,7 @@
   <%= render "comments/comment", comment: comment %>
 <% end %>
 </ol>
+
+<script type="text/javascript">
+  $(document).ready(window.discussion.setup)
+</script>
