Enables comment rating
Rating occurs on the comment update action (only used for changing
rating).

--- a/app/assets/javascripts/views/comment.jst.ejs
+++ b/app/assets/javascripts/views/comment.jst.ejs
@@ -7,11 +7,11 @@
     <a href="#"
       class="comment-vote-link"
       data-id="<%= id %>"
-      data-score="1">Vote Up</a>
+      data-rating="1">Vote Up</a>
     <a href="#"
       class="comment-vote-link"
       data-id="<%= id %>"
-      data-score="-1">Vote Down</a>
+      data-rating="-1">Vote Down</a>
   </span>
 
   <% if (quote != undefined) { %>
