Links newly branched discussions to their source
Also marks poor scoring discussions (the only kind that are auto-
detected for now) as "negative" so their links appear grayed out.

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,7 +8,7 @@
 
 <ul>
   <% @article.discussions.each do |discussion| %>
-  <li><%= link_to discussion.summary, discussion %></li>
+  <li class="<%= "negative" unless discussion.visible %>"><%= link_to discussion.summary, discussion %></li>
   <% end %>
 </ul>
 
