--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,6 +4,8 @@
   </a>
 
   <span class="voting">
+    Rating: <span class="comment-rating"
+                  data-id="<%= comment.id %>"><%= comment.rating %></span>
     <a href="#"
       class="comment-vote-link"
       data-id="<%= comment.id %>"
