Updates visible rating on rate link clicks

--- a/app/assets/javascripts/views/comment.jst.ejs
+++ b/app/assets/javascripts/views/comment.jst.ejs
@@ -4,6 +4,7 @@
   </a>
 
   <span class="voting">
+    Rating: <span class="comment-rating"><%= rating %></span>
     <a href="#"
       class="comment-vote-link"
       data-id="<%= id %>"
