Fixes bug, and redirects to new article on creation

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,4 +6,4 @@
 <% end %>
 </ol>
 
-<%= button_to "Generate demo article", seed_articles_url, method: "POST", remote: true %>
+<%= button_to "Generate demo article", seed_articles_url, method: "POST" %>
