--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -12,4 +12,4 @@
   <% end %>
 </ul>
 
-<%= render "discussions/new_discussion_form", article_id: @article.id %>
+<%#= render "discussions/new_discussion_form", article_id: @article.id %>
