--- a/app/views/discussions/_new_discussion_form.html.erb
+++ b/app/views/discussions/_new_discussion_form.html.erb
@@ -1,4 +1,4 @@
-<form action="<%= article_discussions_url(article_id) %>" method="POST">
+<form action="<%= api_article_discussions_url(article_id) %>" method="POST">
   <%= render "layouts/csrf" %>
   <label>New Discussion
     <input name="discussion[summary]">
