Modularizes websocket.js
Called in discussion and article #show pages.

Actual socket backend changed to sort open sockets by article
or discussion, and then again by id by using a nested hash.

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,3 +13,9 @@
 </ul>
 
 <%#= render "discussions/new_discussion_form", article_id: @article.id %>
+
+<script type="text/javascript">
+  $(document).ready(function() {
+    window.socket.setup();
+  })
+</script>
