Enables executing functions in response to sockets
Socket backend sends a json message with the name of a function and
the a params object to call it with. The client, upon recipt, will
execute window.discussion[functionName](params)

--- a/app/assets/javascripts/views/comment.jst.ejs
+++ b/app/assets/javascripts/views/comment.jst.ejs
@@ -4,7 +4,7 @@
   </a>
 
   <span class="voting">
-    Rating: <span class="comment-rating"><%= rating %></span>
+    Rating: <span class="comment-rating" data-id="<%= id %>"><%= rating %></span>
     <a href="#"
       class="comment-vote-link"
       data-id="<%= id %>"
