--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,7 +4,7 @@
   </a>
 
   <span class="voting">
-    Rating: <span class="comment-rating"><%= comment.rating %></span>
+    Rating: <span class="comment-rating" data-id="<%= comment.id %>"><%= comment.rating %></span>
     <a href="#"
       class="comment-vote-link"
       data-id="<%= comment.id %>"
