--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,7 +6,7 @@
 
 <h2>Ongoing Discussions</h2>
 
-<ul>
+<ul id="discussion-list">
   <% @article.discussions.each do |discussion| %>
   <li class="<%= "negative" unless discussion.visible %>"><%= link_to discussion.summary, discussion %></li>
   <% end %>
@@ -17,5 +17,6 @@
 <script type="text/javascript">
   $(document).ready(function() {
     window.socket.setup();
+    window.discussion.loadTemplates();
   })
 </script>
