--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,4 +6,7 @@
 <% end %>
 </ol>
 
+<p>
+  The following button will generate a new article with a bunch of negative comments. Just a single downvote on them will be enough to tip the scales, and slice them out of the discourse.
+</p>
 <%= button_to "Generate demo article", seed_articles_url, method: "POST" %>
